working with fixing overflow bug on mobile

--- a/src/components/OpportunityModal.css
+++ b/src/components/OpportunityModal.css
@@ -9,8 +9,7 @@
   position: absolute;
   right: -50px;
   top: -10px;
-  top: 0px;
-  right: -30px;
+  color: purple;
 }
 
 .sales-rep {
